--- a/nwmasonry/src/Components/NavBar/NavBar.css
+++ b/nwmasonry/src/Components/NavBar/NavBar.css
@@ -5,7 +5,12 @@
     width: 100%;
 }
 
-/* .ComapnyName{
+.ComapnyName{
     color: #34403A !important;
-    font-size: 75px !important;
-} */
+    font-size: 35px;
+}
+
+li {
+    font-size: 20px;
+    margin-right: 10px;
+}
